--- a/src/app/demo/components/department/department.component.html
+++ b/src/app/demo/components/department/department.component.html
@@ -1,17 +1,19 @@
-<div class=" mb-5">
-  <div class="card" style="border: 1px solid;background-image: linear-gradient(to left, #243949 0%, #517fa4 100%);
+<div class="card"
+  style="border: 1px solid;background-image: linear-gradient(to left, #243949 0%, #517fa4 100%);
   box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset; height: fit-content; display: flex; justify-content: space-between; align-items: center; padding: 1rem;">
-    <h2 style="color: white;font-family: sans-serif;">Department Table</h2>
-    <p-button class="mb-10" (click)="showDialog()" label="ADD Department">
-      <i class="pi pi-plus mr-3"></i>
-    </p-button>
-  </div>
-<div class="flex flex-wrap align-items-center justify-content-end mb-5">
-    <!-- <div class="addstubutt"><p-button (click)="showDialog()"
-      label="ADD Department"></p-button>
-    </div> -->
+  <h2 style="color: white;font-family: sans-serif;">Treasury Table</h2>
+  <p-button class="" (click)="showDeletedData()" label="SEE DELETED TREASURY">
+    <i class="pi pi-eye mr-2"></i>
+  </p-button>
+  <p-button class="" (click)="showNormalData()" label="SEE TREASURY">
+    <i class="pi pi-eye mr-2"></i>
+  </p-button>
+  <p-button class="mb-10" (click)="show()" label="ADD TREASURY">
+    <i class="pi pi-plus mr-2"></i>
+  </p-button>
+</div>
     
-    <form [formGroup]="userForm" >
+    <!-- <form [formGroup]="userForm" >
     <p-dialog class="custom-dialog" [header]="headertext" [closable]="true" [modal]="true"
         [(visible)]="visible" [style]="{ width: '50rem' }" (onHide)="hide(userForm)">
 
@@ -170,12 +172,13 @@
       </ng-template>
 
     </p-dialog>
-  </form>
+  </form> -->
+  
+  
   <p-toast></p-toast>
-</div>
-
-<mh-prime-dynamic-table size="small" [numberRowsShown]="10"
-  [rowsPerPageOptions]="[10, 30, 50]" [data]="tableData" rowSelectionMode="multiple"
-  [actionButtons]="actionButtonConfig" (rowSelect)="handleRowSelection($event)"
-  (actionButtonClicked)="handleButtonClick($event)"  [isLoading]="istableLoading" [showTopMenubar]="true" [showGlobalSearch]="false" (queryParameterChange)="handQueryParameterChange($event)">
-</mh-prime-dynamic-table>
+  <p-confirmDialog></p-confirmDialog>
+  <mh-prime-dynamic-table size="small" [numberRowsShown]="10"
+    [rowsPerPageOptions]="[10, 30, 50]"  [data]="tableData" rowSelectionMode="multiple" [actionButtons]="actionButtonConfig" (rowSelect)="handleRowSelection($event)"
+    (actionButtonClicked)="handleButtonClick($event)" (queryParameterChange)="handQueryParameterChange($event)"
+    (searchKeyChange)="handleSearch($event)" [isLoading]="istableLoading" [showTopMenubar]="true" [showGlobalSearch]="false">
+  </mh-prime-dynamic-table>
