--- a/src/app/demo/components/masterForms/master-treasury-forms/master-treasury-forms.component.html
+++ b/src/app/demo/components/masterForms/master-treasury-forms/master-treasury-forms.component.html
@@ -9,7 +9,7 @@
                 <div class="field col">
                     <label for="firstname2">District Name <span class="red"> *</span></label>
                     <input id="firstname2" type="text" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="DistrictName">
-                    <div *ngIf="userForm.get('districtName')?.invalid && userForm.get('districtName')?.touched" class="error">
+                    <div *ngIf="userForm.get('DistrictName')?.invalid && userForm.get('DistrictName')?.touched" class="error">
                         District Name is required and should not exceed 30 characters.
                       </div>
                 </div>
@@ -23,14 +23,14 @@
               <div class="field col">
                 <label for="firstname2">Treasury Code <span class="red"> *</span></label>
                 <input id="firstname2" type="text" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="Code">
-                <div *ngIf="userForm.get('code')?.invalid && userForm.get('code')?.touched" class="error">
+                <div *ngIf="userForm.get('Code')?.invalid && userForm.get('Code')?.touched" class="error">
                     Code is required and should not exceed 3 characters.
                   </div>
               </div>
               <div class="field col">
                 <label for="firstname2">Treasury Name <span class="red"> *</span></label>
                 <input id="firstname2" type="text" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="Name">
-                <div *ngIf="userForm.get('name')?.invalid && userForm.get('name')?.touched" class="error">
+                <div *ngIf="userForm.get('Name')?.invalid && userForm.get('Name')?.touched" class="error">
                     Name is required and should not exceed 100 characters.
                   </div>
               </div>
