--- a/src/app/demo/components/masterdetailhead/masterdetailhead.component.html
+++ b/src/app/demo/components/masterdetailhead/masterdetailhead.component.html
@@ -1,7 +1,4 @@
-<div class="card"
-  style="border: 1px solid;background-image: linear-gradient(to left, #243949 0%, #517fa4 100%);
-  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset; height: fit-content; display: flex; justify-content: space-between; align-items: center; padding: 1rem;">
-  <h2 style="color: white;font-family: sans-serif;">Detail Head Table</h2>  
+<div class="flex justify-content-end mb-4">
   <p-button class="mb-10" (click)="show()" label="ADD DETAIL HEAD">
     <i class="pi pi-plus mr-3"></i>
   </p-button>
@@ -11,12 +8,12 @@
 <p-toast></p-toast>
 <p-confirmDialog></p-confirmDialog>
 <p-tabView (onChange)="handleChange($event)">
-  <p-tabPanel header="Active Detail Head" [tooltip]="totalActiveDetailHead">
+  <p-tabPanel header="Active">
     <p>
       There are {{totalActiveDetailHead}} Detail Head's are active out of {{totalActiveDetailHead + totalInactiveDetailHead}} Detail Head's given below.
     </p>
   </p-tabPanel>
-  <p-tabPanel header="Inactive Detail Head" [tooltip]="totalInactiveDetailHead">
+  <p-tabPanel header="Inactive">
     <p>
       There are {{totalInactiveDetailHead}} Detail Head's are inactive out of {{totalActiveDetailHead + totalInactiveDetailHead}} Detail Head's given below.
     </p>
