--- a/src/app/demo/components/masterdetailhead/masterdetailhead.component.html
+++ b/src/app/demo/components/masterdetailhead/masterdetailhead.component.html
@@ -1,5 +1,5 @@
 <div class="flex justify-content-end mb-4">
-  <p-button class="mb-10" (click)="show()" label="ADD DETAIL HEAD">
+  <p-button (click)="show()" label="ADD DETAIL HEAD">
     <i class="pi pi-plus mr-3"></i>
   </p-button>
 </div>
@@ -7,18 +7,20 @@
 
 <p-toast></p-toast>
 <p-confirmDialog></p-confirmDialog>
-<p-tabView (onChange)="handleChange($event)">
-  <p-tabPanel header="Active">
-    <p>
-      There are {{totalActiveDetailHead}} Detail Head's are active out of {{totalActiveDetailHead + totalInactiveDetailHead}} Detail Head's given below.
-    </p>
-  </p-tabPanel>
-  <p-tabPanel header="Inactive">
-    <p>
-      There are {{totalInactiveDetailHead}} Detail Head's are inactive out of {{totalActiveDetailHead + totalInactiveDetailHead}} Detail Head's given below.
-    </p>
-  </p-tabPanel>
-</p-tabView>
+<div class="mb-2">
+  <p-tabView (onChange)="handleChange($event)">
+    <p-tabPanel header="Active">
+      <p>
+        There are {{totalActiveDetailHead}} Detail Head's are active out of {{totalActiveDetailHead + totalInactiveDetailHead}} Detail Head's given below.
+      </p>
+    </p-tabPanel>
+    <p-tabPanel header="Inactive">
+      <p>
+        There are {{totalInactiveDetailHead}} Detail Head's are inactive out of {{totalActiveDetailHead + totalInactiveDetailHead}} Detail Head's given below.
+      </p>
+    </p-tabPanel>
+  </p-tabView>
+</div>
 <mh-prime-dynamic-table size="small" [numberRowsShown]="10"
   [rowsPerPageOptions]="[10, 30, 50]"[data]="tableData" rowSelectionMode="multiple"
   [actionButtons]="actionButtonConfig" (rowSelect)="handleRowSelection($event)"
