--- a/src/app/demo/components/schemehead/schemehead.component.html
+++ b/src/app/demo/components/schemehead/schemehead.component.html
@@ -1,17 +1,17 @@
 <div class=" mb-5">
-  <div class="card" style="border: 1px solid;background-image: linear-gradient(to left, #243949 0%, #517fa4 100%);
+  <!-- <div class="card" style="border: 1px solid;background-image: linear-gradient(to left, #243949 0%, #517fa4 100%);
   box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset; height: fit-content; display: flex; justify-content: space-between; align-items: center; padding: 1rem;">
     <h2 style="color: white;font-family: sans-serif;">SchemeHead Table</h2>
     <p-button class="mb-10" (click)="showDialog()" label="ADD SchemeHead">
       <i class="pi pi-plus mr-3"></i>
-    </p-button>
+    </p-button> -->
     <!-- <p-button class="" (click)="showNormalData()" label="SEE SchemeHead">
       <i class="pi pi-eye mr-2"></i>
     </p-button>
     <p-button class="" (click)="showDeletedData()" label="SEE DELETED SCHEMEHEAD">
       <i class="pi pi-eye mr-2"></i>
     </p-button> -->
-  </div>
+  <!-- </div> -->
 <div class="flex flex-wrap align-items-center justify-content-end mb-5">
     <!-- <div class="addstubutt"><p-button (click)="showDialog()"
       label="ADD SchemeHead"></p-button>
@@ -37,14 +37,14 @@
                 <label class="text-2xl" for="firstname2">Demand Code*</label>
                 <input id="firstname2" type="text" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="demandCode">
                 <div *ngIf="userForm.get('demandCode')?.invalid && userForm.get('demandCode')?.touched" class="error">
-                  Demand Code is required length 2 <div class=""></div>
+                  Demand Code is required length 2<div class=""></div>
                 </div>
             </div>
             <div class="field col">
                 <label class="text-2xl" for="firstname2">SchemeHead Code*</label>
                 <input id="firstname2" type="text" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="code">
                 <div *ngIf="userForm.get('code')?.invalid && userForm.get('code')?.touched" class="error">
-                  Code is required length 3.
+                  Code is required length 3 .
                 </div>
               </div>
           </div>
@@ -83,10 +83,20 @@
   <p-toast></p-toast>
   </div>
   <p-confirmDialog></p-confirmDialog>
+  <p-button class="flex justify-content-end" (click)="showDialog()" label="ADD SchemeHead">
+    <i class="pi pi-plus mr-3"></i>
+  </p-button>
   <p-tabView (onChange)="handleChange($event)">
-    <p-tabPanel header="Active SchemeHead" [tooltip]="totalActiveSchemeHead">
+   
+    <p-tabPanel header="Active  " >
+      <p>
+        There are {{totalActiveSchemeHead}} SchemeHead's are active out of {{totalActiveSchemeHead + totalInactiveSchemeHead}} SchemeHead's given below.
+      </p>
     </p-tabPanel>
-    <p-tabPanel header="Inactive SchemeHead" [tooltip]="totalInactiveSchemeHead">
+    <p-tabPanel header="Inactive " >
+      <p>
+        There are {{totalInactiveSchemeHead}} SchemeHead's are inactive out of {{totalActiveSchemeHead + totalInactiveSchemeHead}} SchemeHead's given below.
+      </p>
     </p-tabPanel>
 </p-tabView>
   <mh-prime-dynamic-table 
