--- a/src/app/demo/components/majorhead/majorhead.component.html
+++ b/src/app/demo/components/majorhead/majorhead.component.html
@@ -1,11 +1,14 @@
-<div class=" mb-5">
-  <div class="card" style="border: 1px solid;background-image: linear-gradient(to left, #243949 0%, #517fa4 100%);
-  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset; height: fit-content; display: flex; justify-content: space-between; align-items: center; padding: 1rem;">
-    <h2 style="color: white;font-family: sans-serif;">MajorHead Table</h2>
-    <p-button class="mb-10" (click)="showDialog()" label="ADD MajorHead">
+<div class="grid">
+  <div class="col-10">
+    <p-breadcrumb [model]="items" [home]="home"></p-breadcrumb>
+  </div>
+  <div class="flex justify-content-end col">
+    <p-button (click)="showDialog()" label="ADD MajorHead">
       <i class="pi pi-plus mr-3"></i>
     </p-button>
   </div>
+</div>
+
 <div class="flex flex-wrap align-items-center justify-content-end mb-5">
    
     <form [formGroup]="userForm" >
