--- a/src/app/demo/components/masterddo/masterddo.component.html
+++ b/src/app/demo/components/masterddo/masterddo.component.html
@@ -1,7 +1,12 @@
-<div class="flex justify-content-end mb-4">
-  <p-button (click)="show()" label="ADD DDO">
-    <i class="pi pi-plus mr-2"></i>
-  </p-button>
+<div class="grid">
+  <div class="col-10">
+    <p-breadcrumb [model]="items" [home]="home"></p-breadcrumb>
+  </div>
+  <div class="flex justify-content-end col">
+    <p-button (click)="show()" label="ADD DDO">
+      <i class="pi pi-plus mr-2"></i>
+    </p-button>
+  </div>
 </div>
 
 <p-toast></p-toast>
