--- a/src/app/demo/components/minorhead/minorhead.component.html
+++ b/src/app/demo/components/minorhead/minorhead.component.html
@@ -1,17 +1,22 @@
-<div class="card"
-  style="border: 1px solid;background-image: linear-gradient(to left, #243949 0%, #517fa4 100%);
-  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset; height: fit-content; display: flex; justify-content: space-between; align-items: center; padding: 1rem;">
-  <h2 style="color: white;font-family: sans-serif;">MINOR Table</h2>
+<div class="grid">
+  <div class="col-10">
+    <p-breadcrumb [model]="items" [home]="home"></p-breadcrumb>
+  </div>
+  <div class="flex justify-content-end col">
+    <p-button class="mb-10" (click)="show()" label="ADD MINOR HEAD">
+      <i class="pi pi-plus mr-2"></i>
+    </p-button>
+  </div>
+</div>
+
+
+
   <p-button class="" (click)="showDeletedData()" label="SEE DELETED MINOR">
     <i class="pi pi-eye mr-2"></i>
   </p-button>
   <p-button class="" (click)="showNormalData()" label="SEE MINOR">
     <i class="pi pi-eye mr-2"></i>
   </p-button>
-  <p-button class="mb-10" (click)="show()" label="ADD MINOR">
-    <i class="pi pi-plus mr-2"></i>
-  </p-button>
-</div>
 
 
 <p-toast></p-toast>
