--- a/src/app/demo/components/treasury/treasury.component.html
+++ b/src/app/demo/components/treasury/treasury.component.html
@@ -1,79 +1,20 @@
-<div class="card"
-  style="border: 1px solid;background-image: linear-gradient(to left, #243949 0%, #517fa4 100%);
-  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset; height: fit-content; display: flex; justify-content: space-between; align-items: center; padding: 1rem;">
-  <h2 style="color: white;font-family: sans-serif;">Treasury Table</h2>
-  <p-button class="" (click)="showDeletedData()" label="SEE DELETED TREASURY">
-    <i class="pi pi-eye mr-2"></i>
-  </p-button>
-  <p-button class="" (click)="showNormalData()" label="SEE TREASURY">
-    <i class="pi pi-eye mr-2"></i>
-  </p-button>
-  <p-button class="mb-10" (click)="show()" label="ADD TREASURY">
-    <i class="pi pi-plus mr-2"></i>
-  </p-button>
+<div class="grid">
+  <div class="col-10">
+    <p-breadcrumb [model]="items" [home]="home"></p-breadcrumb>
+  </div>
+  <div class="flex justify-content-end col">
+    <p-button class="mb-10" (click)="show()" label="ADD TREASURY">
+      <i class="pi pi-plus mr-2"></i>
+    </p-button>
+  </div>
 </div>
-    <!-- <form [formGroup]="userForm" >
-    <p-dialog class="custom-dialog" header="Edit Profile" [closable]="true" [modal]="true"
-        [(visible)]="visible" [style]="{ width: '50rem' }" (onHide)="hide(userForm)">
-  
-        
-          <div class="formgrid grid">
-            <div class="field col">
-                <label for="firstname2">District Name <span class="red"> *</span></label>
-                <input id="firstname2" type="text" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="districtName">
-                <div *ngIf="userForm.get('districtName')?.invalid && userForm.get('districtName')?.touched" class="error">
-                    District Name is required and should not exceed 30 characters.
-                  </div>
-            </div>
-            <div class="field col">
-                <label for="lastname2">District Code</label>
-                <input id="lastname2" type="number" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="districtCode">
-               
-            </div>
-          </div>
-          <div class="formgrid grid">
-          <div class="field col">
-            <label for="firstname2">Treasury Code <span class="red"> *</span></label>
-            <input id="firstname2" type="text" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="Code">
-            <div *ngIf="userForm.get('Code')?.invalid && userForm.get('Code')?.touched" class="error">
-                Code is required and should not exceed 3 characters.
-              </div>
-          </div>
-          <div class="field col">
-            <label for="firstname2">Treasury Name <span class="red"> *</span></label>
-            <input id="firstname2" type="text" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="name">
-            <div *ngIf="userForm.get('name')?.invalid && userForm.get('name')?.touched" class="error">
-                Name is required and should not exceed 100 characters.
-              </div>
-          </div>
-          </div>
-          
-          
-  
-          <div class="button-container" *ngIf="isSubUp; else elseBlock">
-            <div class="formgrid grid">
-              <div class="col-9">
-                <p-button class="flex flex-wrap align-items-center justify-content-end mt-4" label="Cancel" icon="pi pi-times" styleClass="p-button-warning" iconPos="left" (click)="cancel(userForm)" ></p-button>
-              </div>
-              <div class="field col">
-                <p-button class="flex flex-wrap align-items-center justify-content-end mr-5 mt-4" label="Submit"  icon="pi pi-check" styleClass="p-button-success" iconPos="left" (click)="submit(userForm)" ></p-button>
-              </div>
-            </div>
-          </div>
-          <ng-template #elseBlock>
-            <div class="formgrid grid">
-              <div class="col-9">
-                <p-button class="flex flex-wrap align-items-center justify-content-end mt-4" label="Cancel" icon="pi pi-times" iconPos="left" styleClass="p-button-warning" (click)="cancel(userForm)" ></p-button>
-              </div>
-              <div class="field col">
-                <p-button class="flex flex-wrap align-items-center justify-content-end mr-5 mt-4" label="Update" icon="pi pi-check" styleClass="p-button-success" iconPos="left" (click)="update(userForm)" ></p-button>
-              </div>
-            </div>
-          </ng-template>
-      
-    </p-dialog>
-  </form> -->
-  
+
+<p-button class="" (click)="showDeletedData()" label="SEE DELETED TREASURY">
+  <i class="pi pi-eye mr-2"></i>
+</p-button>
+<p-button class="" (click)="showNormalData()" label="SEE TREASURY">
+  <i class="pi pi-eye mr-2"></i>
+</p-button>
   
 <p-toast></p-toast>
 <p-confirmDialog></p-confirmDialog>
