--- a/src/app/demo/components/department/department.component.html
+++ b/src/app/demo/components/department/department.component.html
@@ -1,14 +1,14 @@
 <div class="card"
   style="border: 1px solid;background-image: linear-gradient(to left, #243949 0%, #517fa4 100%);
   box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset; height: fit-content; display: flex; justify-content: space-between; align-items: center; padding: 1rem;">
-  <h2 style="color: white;font-family: sans-serif;">Treasury Table</h2>
-  <p-button class="" (click)="showDeletedData()" label="SEE DELETED TREASURY">
+  <h2 style="color: white;font-family: sans-serif;">DEPARTMENT Table</h2>
+  <p-button class="" (click)="showDeletedData()" label="SEE DELETED DEPARTMENT">
     <i class="pi pi-eye mr-2"></i>
   </p-button>
-  <p-button class="" (click)="showNormalData()" label="SEE TREASURY">
+  <p-button class="" (click)="showNormalData()" label="SEE DEPARTMENT">
     <i class="pi pi-eye mr-2"></i>
   </p-button>
-  <p-button class="mb-10" (click)="show()" label="ADD TREASURY">
+  <p-button class="mb-10" (click)="show()" label="ADD DEPARTMENT">
     <i class="pi pi-plus mr-2"></i>
   </p-button>
 </div>
