--- a/src/app/demo/components/schemehead/schemehead.component.html
+++ b/src/app/demo/components/schemehead/schemehead.component.html
@@ -3,7 +3,7 @@
     <p-breadcrumb [model]="items" [home]="home"></p-breadcrumb>
   </div>
   <div class="flex justify-content-end col">
-    <p-button class="mb-10" (click)="showDialog()" label="ADD SchemeHead">
+    <p-button (click)="showDialog()" label="ADD SchemeHead">
       <i class="pi pi-plus mr-3"></i>
     </p-button>
   </div>
@@ -76,9 +76,6 @@
   <p-toast></p-toast>
   </div>
   <p-confirmDialog></p-confirmDialog>
-  <p-button class="flex justify-content-end" (click)="showDialog()" label="ADD SchemeHead">
-    <i class="pi pi-plus mr-3"></i>
-  </p-button>
   <p-tabView (onChange)="handleChange($event)">
    
     <p-tabPanel header="Active  " >
