updated dynamic dialog in sub major head

--- a/src/app/demo/components/masterForms/sub-major-head-forms/sub-major-head-forms.component.html
+++ b/src/app/demo/components/masterForms/sub-major-head-forms/sub-major-head-forms.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="custom-dialog">
+<div class="custom-dialog">
     <div class="flex flex-wrap align-items-center justify-content-end">
 
         <form [formGroup]="userForm">
@@ -77,4 +77,4 @@
         </form>
 
     </div>
-</div> -->
+</div>
