Major head updated

--- a/src/app/demo/components/majorhead/majorhead.component.html
+++ b/src/app/demo/components/majorhead/majorhead.component.html
@@ -3,77 +3,23 @@
     <p-breadcrumb [model]="items" [home]="home"></p-breadcrumb>
   </div>
   <div class="flex justify-content-end col">
-    <p-button (click)="showDialog()" label="ADD MajorHead">
-      <i class="pi pi-plus mr-3"></i>
+    <p-button class="mb-10" (click)="show()" label="ADD TREASURY">
+      <i class="pi pi-plus mr-2"></i>
     </p-button>
   </div>
 </div>
 
-<div class="flex flex-wrap align-items-center justify-content-end mb-5">
-   
-    <form [formGroup]="userForm" >
-    <p-dialog class="custom-dialog" [header]="headertext" [closable]="true" [modal]="true"
-        [(visible)]="visible" [style]="{ width: '50rem' }" (onHide)="hide(userForm)">
+<p-button class="" (click)="showDeletedData()" label="SEE DELETED TREASURY">
+  <i class="pi pi-eye mr-2"></i>
+</p-button>
+<p-button class="" (click)="showNormalData()" label="SEE TREASURY">
+  <i class="pi pi-eye mr-2"></i>
+</p-button>
   
-        
-        
-          <div class="formgrid grid">
-          <div class="field col">
-            <label class="text-2xl" for="firstname2">Major Head Code<span class="red"> *</span></label>
-            <input id="firstname" type="text" (keyup)="onChangedata($event)" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="Code">
-            <div *ngIf="userForm.get('Code')?.invalid && userForm.get('Code')?.touched" class="error">
-              Code is required.
-            </div>
-          </div>
-          <div class="field col">
-            <label class="text-2xl" for="firstname2">Name<span class="red"> *</span></label>
-            <input id="firstname2" type="text" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="Name">
-            <div *ngIf="userForm.get('Designation')?.invalid && userForm.get('Designation')?.touched" class="error">
-              Name Mstld is required.
-            </div>
-          </div>
-        </div>
-        
-  
-          <div class="button-container" *ngIf="isSubUp; else elseBlock">
-            <div class="formgrid grid">
-              <div class="col-9">
-                <p-button class="flex flex-wrap align-items-center justify-content-end mt-4" label="Cancel"
-                  icon="pi pi-times" iconPos="left" (click)="cancel(userForm)"></p-button>
-              </div>
-              <div class="field col">
-                <p-button class="flex flex-wrap align-items-center justify-content-end mr-5 mt-4" label="Submit"
-                  icon="pi pi-check" iconPos="left" (click)="submit(userForm)"></p-button>
-              </div>
-            </div>
-          </div>
-          <ng-template #elseBlock>
-            <div class="formgrid grid">
-              <div class="col-9">
-                <p-button class="flex flex-wrap align-items-center justify-content-end mt-4" label="Cancel"
-                  icon="pi pi-times" iconPos="left" (click)="cancel(userForm)"></p-button>
-              </div>
-              <div class="field col">
-                <p-button class="flex flex-wrap align-items-center justify-content-end mr-5 mt-4" label="Update"
-                  icon="pi pi-check" iconPos="left" (click)="update(userForm)"></p-button>
-              </div>
-            </div>
-          </ng-template>
-      
-    </p-dialog>
-  </form>
-  <p-toast></p-toast>
-  </div>
-  
-  <mh-prime-dynamic-table 
-    size="small"
-    [numberRowsShown]="10"
-    [rowsPerPageOptions]="[10, 30, 50]"
-    [data]="tableData"
-    rowSelectionMode="multiple"
-    [actionButtons]="actionButtonConfig"
-    (rowSelect)="handleRowSelection($event)"
-    (actionButtonClicked)="handleButtonClick($event)"
-    (queryParameterChange)="handQueryParameterChange($event)"[isLoading]="istableLoading" [showTopMenubar]="true" [showGlobalSearch]="false"
-  >
-  </mh-prime-dynamic-table>
+<p-toast></p-toast>
+<p-confirmDialog></p-confirmDialog>
+<mh-prime-dynamic-table size="small" [numberRowsShown]="10"
+  [rowsPerPageOptions]="[10, 30, 50]"  [data]="tableData" rowSelectionMode="multiple" [actionButtons]="actionButtonConfig" (rowSelect)="handleRowSelection($event)"
+  (actionButtonClicked)="handleButtonClick($event)" (queryParameterChange)="handQueryParameterChange($event)"
+  (searchKeyChange)="handleSearch($event)" [isLoading]="istableLoading" [showTopMenubar]="true" [showGlobalSearch]="false">
+</mh-prime-dynamic-table>
