--- a/src/app/demo/components/masterForms/master-majorhead-forms/master-majorhead-forms.component.html
+++ b/src/app/demo/components/masterForms/master-majorhead-forms/master-majorhead-forms.component.html
@@ -1,8 +1,8 @@
-<div class="flex flex-wrap align-items-center justify-content-end mb-5">
+<div class="custom-dialog">
+  <div class="flex flex-wrap align-items-center justify-content-end">
    
     <form [formGroup]="userForm" >
-    <p-dialog class="custom-dialog" [header]="headertext" [closable]="true" [modal]="true"
-        [(visible)]="visible" [style]="{ width: '50rem' }" (onHide)="hide(userForm)">
+      <div class="mb-4 mt-3">
           <div class="formgrid grid">
           <div class="field col">
             <label class="text-2xl" for="firstname2">Major Head Code<span class="red"> *</span></label>
@@ -19,34 +19,52 @@
             </div>
           </div>
         </div>
-        
-  
-          <div class="button-container" *ngIf="isSubUp; else elseBlock">
-            <div class="formgrid grid">
+        </div>  
+        <div class="button-container" *ngIf="(dialogButts == 1); else elseBlock1">
+          <div class="formgrid grid">
               <div class="col-9">
-                <p-button class="flex flex-wrap align-items-center justify-content-end mt-4" label="Cancel"
-                  icon="pi pi-times" iconPos="left" (click)="cancel(userForm)"></p-button>
+                  <p-button class="flex flex-wrap align-items-center justify-content-end mt-4" label="Cancel"
+                      icon="pi pi-times" iconPos="left" styleClass="p-button-warning"
+                      (click)="cancel()"></p-button>
               </div>
               <div class="field col">
-                <p-button class="flex flex-wrap align-items-center justify-content-end mr-5 mt-4" label="Submit"
-                  icon="pi pi-check" iconPos="left" (click)="submit(userForm)"></p-button>
+                  <p-button class="flex flex-wrap align-items-center justify-content-end mr-5 mt-4"
+                      styleClass="p-button-success" label="Submit" icon="pi pi-check" iconPos="left"
+                      (click)="submit()"></p-button>
+              </div>
+          </div>
+      </div>
+      <ng-template #elseBlock1>
+          <div class="button-container" *ngIf="(dialogButts == 2);else elseBlock2">
+              <div class="formgrid grid">
+                  <div class="col-9">
+                      <p-button class="flex flex-wrap align-items-center justify-content-end mt-4" label="Cancel"
+                          icon="pi pi-times" iconPos="left" styleClass="p-button-warning"
+                          (click)="cancel()"></p-button>
+                  </div>
+                  <div class="field col">
+                      <p-button class="flex flex-wrap align-items-center justify-content-end mr-5 mt-4"
+                          label="Update" icon="pi pi-check" iconPos="left" styleClass="p-button-success"
+                          (click)="update()"></p-button>
+                  </div>
+              </div>
+          </div>
+      </ng-template>
+      <ng-template #elseBlock2>
+          <div class="button-container" *ngIf="(dialogButts == 3)">
+            <div class="formgrid grid">
+              <div class="col">
+                <p-button class="flex flex-wrap align-items-center justify-content-end mt-4" label="Close"
+                  icon="pi pi-times" iconPos="left" (click)="hide()"></p-button>
               </div>
             </div>
           </div>
-          <ng-template #elseBlock>
-            <div class="formgrid grid">
-              <div class="col-9">
-                <p-button class="flex flex-wrap align-items-center justify-content-end mt-4" label="Cancel"
-                  icon="pi pi-times" iconPos="left" (click)="cancel(userForm)"></p-button>
-              </div>
-              <div class="field col">
-                <p-button class="flex flex-wrap align-items-center justify-content-end mr-5 mt-4" label="Update"
-                  icon="pi pi-check" iconPos="left" (click)="update(userForm)"></p-button>
-              </div>
-            </div>
-          </ng-template>
+        </ng-template>
+  
+     
       
-    </p-dialog>
+   
   </form>
   <p-toast></p-toast>
+  </div>
   </div>
