--- a/src/app/demo/components/dashboardskeleton/dashboardskeleton.component.html
+++ b/src/app/demo/components/dashboardskeleton/dashboardskeleton.component.html
@@ -1,3 +1,6 @@
+<div class="mt-3">
+    <p-skeleton height="3rem" styleClass="mb-2"></p-skeleton>
+</div>
 <div class="grid mt-4">
         <div *ngFor="let item of items" class="col">
             <div class="card" [style]="{width: '360px'}">
