--- a/src/app/demo/components/department/department.component.html
+++ b/src/app/demo/components/department/department.component.html
@@ -3,16 +3,16 @@
     <p-breadcrumb [model]="items" [home]="home"></p-breadcrumb>
   </div>
   <div class="flex justify-content-end col">
-    <p-button class="mb-10" (click)="show()" label="ADD TREASURY">
+    <p-button class="mb-10" (click)="show()" label="ADD DEPARTMENT">
       <i class="pi pi-plus mr-2"></i>
     </p-button>
   </div>
   
 </div>
-<p-button class="" (click)="showDeletedData()" label="SEE DELETED TREASURY">
+<p-button class="" (click)="showDeletedData()" label="SEE DELETED DEPARTMENT">
   <i class="pi pi-eye mr-2"></i>
 </p-button>
-<p-button class="" (click)="showNormalData()" label="SEE TREASURY">
+<p-button class="" (click)="showNormalData()" label="SEE DEPARTMENT">
   <i class="pi pi-eye mr-2"></i>
 </p-button>
 
